2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/r2k.cc,
	  sim/ucsim/z80.src/r2kcl.h:
	  Forgotten files from Leland Morrison's Rabbit 2000 ucsim port.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  sim/ucsim/z80.src/inst_r2k.cc:
	  Fixed multiplication using r2k mul instruction.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asrab/rabbitmch.c:
	  Leland Morrison's support for ld iy, hl.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/inst_r2k.cc,
	  sim/ucsim/z80.src/glob_r2k.cc,
	  sim/ucsim/z80.src/inst_ed_r2k.cc:
	  Forgotten files from Leland Morrison's Rabbit 2000 ucsim port, support for r2k mul and ld iy, hl instructions in ucsim.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Handle r2k mul instruction in code size calculation.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/Makefile.in,
	  sim/ucsim/z80.src/z80cl.h,
	  sim/ucsim/z80.src/regsz80.h,
	  sim/ucsim/z80.src/sz80.cc,
	  sim/ucsim/z80.src/z80mac.h,
	  sim/ucsim/z80.src/inst_xd.cc,
	  sim/ucsim/z80.src/z80.cc,
	  sim/ucsim/z80.src/glob.cc,
	  sim/ucsim/z80.src/inst_dd.cc,
	  sim/ucsim/z80.src/glob.h,
	  sim/ucsim/z80.src/inst_fd.cc,
	  sim/ucsim/z80.src/simz80.cc,
	  sim/ucsim/stypes.h,
	  sim/ucsim/sim.src/uc.cc,
	  sim/ucsim/globals.cc:
	  Leland Morrison's Rabbit 2000 ucsim port.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use add sp, #n in function entry in r2k port.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use Rabbit-specific instructions in and, multiplication and assignment for r2k port.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Preparations for use of add sp, #n in function entry in r2k port.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug1115321.c
	  support/regression/Makefile.in